# EagleCore

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/EagleCore/: Environment.hh  ProcessTermination.hh  ScopedPointer.hh  Time.hh
src/: ProcessTermination.cc  ProcessTerminationImpl.hh  Time.cc
src/Posix/: TimePosix.hh
src/Unix/: EnvironmentUnix.cc  ProcessTerminationImplUnix.cc
src/Win32/: EnvironmentWin32.cc  ProcessTerminationImplWin32.cc
test/: CMakeLists.txt  EnvironmentTests.cc  ProcessTerminationTests.cc  ScopedPointerTests.cc  TimeTests.cc
